--- a/WasteIntoCity/WasteIntoCity.Application/WasteIntoCity.Application.csproj
+++ b/WasteIntoCity/WasteIntoCity.Application/WasteIntoCity.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WasteIntoCity.Core\WasteIntoCity.Core.csproj" />
+  </ItemGroup>
+
 </Project>
