--- a/WasteIntoCity/WasteIntoCity.Infrastructure/WasteIntoCity.Infrastructure.csproj
+++ b/WasteIntoCity/WasteIntoCity.Infrastructure/WasteIntoCity.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WasteIntoCity.Application\WasteIntoCity.Application.csproj" />
+  </ItemGroup>
+
 </Project>
